Fix word wrap proble in Firefox

--- a/web/static/css/app.css
+++ b/web/static/css/app.css
@@ -308,5 +308,4 @@ html, body {
     height: calc(100% - 20px);
     font-size: 1.3em;
     overflow: auto;
-    white-space: nowrap;
 }
